v1.0.0/modules/schema/pages/class/TransmissionPath.adoc
= `TransmissionPath`
:toclevels: 4


+++An electrical connection, link, or line consisting of one or more parallel transmission elements between two areas of the interconnected electric systems, or portions thereof. TransmissionCorridor and TransmissionRightOfWay refer to legal aspects. The TransmissionPath refers to the segments between a TransmissionProvider's ServicePoints.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransmissionPath`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransmissionPath`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransmissionPath {
  style {
    fill: "#fffbef"
    shadow: true
  }
}







TransmissionCorridor {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionReservation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ServicePoint {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ServicePoint {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






TransmissionPath -> TransmissionCorridor: For


TransmissionPath -> TransmissionReservation: TransmissionReservation


TransmissionPath -> ServicePoint: DeliveryPoint


TransmissionPath -> TransmissionProduct: LocatedOn


TransmissionPath -> ServicePoint: PointOfReceipt


TransmissionPath -> DiagramObject: DiagramObjects


TransmissionPath -> InstanceSet: InstanceSet


TransmissionPath -> Name: Names


TransmissionPath -> ChangeSetMember: PropertiesCIMDataObject


TransmissionPath -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<DeliveryPoint,`DeliveryPoint`>>
| 1
| xref::class/ServicePoint.adoc[`ServicePoint`]
| +++A transmission path has a "point-of-delivery" service point+++

| <<For,`For`>>
| 1
| xref::class/TransmissionCorridor.adoc[`TransmissionCorridor`]
| +++A TransmissionPath is contained in a TransmissionCorridor.+++

| <<PointOfReceipt,`PointOfReceipt`>>
| 1
| xref::class/ServicePoint.adoc[`ServicePoint`]
| +++A transmission path has a "point-of-receipt" service point+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<availTransferCapability,`availTransferCapability`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The available transmission capability of a transmission path for the reference direction.+++

| <<parallelPathFlag,`parallelPathFlag`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Flag which indicates if the transmission path is also a designated interconnection "parallel path".+++

| <<totalTransferCapability,`totalTransferCapability`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The total transmission capability of a transmission path in the reference direction.+++

| <<LocatedOn,`LocatedOn`>>
| 0..*
| xref::class/TransmissionProduct.adoc[`TransmissionProduct`]
| +++A transmission product is located on a transmission path.+++

| <<TransmissionReservation,`TransmissionReservation`>>
| 0..*
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#availTransferCapability]
=== `availTransferCapability`
+++The available transmission capability of a transmission path for the reference direction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.availTransferCapability`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#DeliveryPoint]
=== `DeliveryPoint`
+++A transmission path has a "point-of-delivery" service point+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.DeliveryPoint`
| Cardinality
| 1
| Type
| xref::class/ServicePoint.adoc[`ServicePoint`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#For]
=== `For`
+++A TransmissionPath is contained in a TransmissionCorridor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.For`
| Cardinality
| 1
| Type
| xref::class/TransmissionCorridor.adoc[`TransmissionCorridor`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#LocatedOn]
=== `LocatedOn`
+++A transmission product is located on a transmission path.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.LocatedOn`
| Cardinality
| 0..*
| Type
| xref::class/TransmissionProduct.adoc[`TransmissionProduct`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#parallelPathFlag]
=== `parallelPathFlag`
+++Flag which indicates if the transmission path is also a designated interconnection "parallel path".+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.parallelPathFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#PointOfReceipt]
=== `PointOfReceipt`
+++A transmission path has a "point-of-receipt" service point+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.PointOfReceipt`
| Cardinality
| 1
| Type
| xref::class/ServicePoint.adoc[`ServicePoint`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#totalTransferCapability]
=== `totalTransferCapability`
+++The total transmission capability of a transmission path in the reference direction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.totalTransferCapability`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#TransmissionReservation]
=== `TransmissionReservation`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.TransmissionReservation`
| Cardinality
| 0..*
| Type
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]


|===


