v1.1.0/modules/schema/pages/class/TransmissionPath.adoc
= `TransmissionPath`
:toclevels: 4


+++An electrical connection, link, or line consisting of one or more parallel transmission elements between two areas of the interconnected electric systems, or portions thereof. TransmissionCorridor and TransmissionRightOfWay refer to legal aspects. The TransmissionPath refers to the segments between a TransmissionProvider's ServicePoints.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransmissionPath`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransmissionPath`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<DeliveryPoint,`DeliveryPoint`>>
//| [[slots_table.DeliveryPoint]]<<DeliveryPoint,`DeliveryPoint`>>
| 1 +
xref::class/ServicePoint.adoc[`ServicePoint`]
| +++A transmission path has a "point-of-delivery" service point+++
| _n/a_

| <<For,`For`>>
//| [[slots_table.For]]<<For,`For`>>
| 1 +
xref::class/TransmissionCorridor.adoc[`TransmissionCorridor`]
| +++A TransmissionPath is contained in a TransmissionCorridor.+++
| _n/a_

| <<LocatedOn,`LocatedOn`>>
//| [[slots_table.LocatedOn]]<<LocatedOn,`LocatedOn`>>
| 0..* +
xref::class/TransmissionProduct.adoc[`TransmissionProduct`]
| +++A transmission product is located on a transmission path.+++
| _n/a_

| <<PointOfReceipt,`PointOfReceipt`>>
//| [[slots_table.PointOfReceipt]]<<PointOfReceipt,`PointOfReceipt`>>
| 1 +
xref::class/ServicePoint.adoc[`ServicePoint`]
| +++A transmission path has a "point-of-receipt" service point+++
| _n/a_

| <<TransmissionReservation,`TransmissionReservation`>>
//| [[slots_table.TransmissionReservation]]<<TransmissionReservation,`TransmissionReservation`>>
| 0..* +
xref::class/TransmissionReservation.adoc[`TransmissionReservation`]
| _n/a_
| _n/a_

| <<availTransferCapability,`availTransferCapability`>>
//| [[slots_table.availTransferCapability]]<<availTransferCapability,`availTransferCapability`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The available transmission capability of a transmission path for the reference direction.+++
| _n/a_

| <<parallelPathFlag,`parallelPathFlag`>>
//| [[slots_table.parallelPathFlag]]<<parallelPathFlag,`parallelPathFlag`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Flag which indicates if the transmission path is also a designated interconnection "parallel path".+++
| _n/a_

| <<totalTransferCapability,`totalTransferCapability`>>
//| [[slots_table.totalTransferCapability]]<<totalTransferCapability,`totalTransferCapability`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The total transmission capability of a transmission path in the reference direction.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#availTransferCapability]
=== `availTransferCapability`
+++The available transmission capability of a transmission path for the reference direction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.availTransferCapability`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.availTransferCapability,&#10548;>>
--
////


//[discrete]
[#DeliveryPoint]
=== `DeliveryPoint`
+++A transmission path has a "point-of-delivery" service point+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.DeliveryPoint`
| Cardinality
| 1
| Type
| xref::class/ServicePoint.adoc[`ServicePoint`]


|===

////
[.text-left]
--
<<slots_table.DeliveryPoint,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#For]
=== `For`
+++A TransmissionPath is contained in a TransmissionCorridor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.For`
| Cardinality
| 1
| Type
| xref::class/TransmissionCorridor.adoc[`TransmissionCorridor`]


|===

////
[.text-left]
--
<<slots_table.For,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#LocatedOn]
=== `LocatedOn`
+++A transmission product is located on a transmission path.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.LocatedOn`
| Cardinality
| 0..*
| Type
| xref::class/TransmissionProduct.adoc[`TransmissionProduct`]


|===

////
[.text-left]
--
<<slots_table.LocatedOn,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#parallelPathFlag]
=== `parallelPathFlag`
+++Flag which indicates if the transmission path is also a designated interconnection "parallel path".+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.parallelPathFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.parallelPathFlag,&#10548;>>
--
////


//[discrete]
[#PointOfReceipt]
=== `PointOfReceipt`
+++A transmission path has a "point-of-receipt" service point+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.PointOfReceipt`
| Cardinality
| 1
| Type
| xref::class/ServicePoint.adoc[`ServicePoint`]


|===

////
[.text-left]
--
<<slots_table.PointOfReceipt,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#totalTransferCapability]
=== `totalTransferCapability`
+++The total transmission capability of a transmission path in the reference direction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.totalTransferCapability`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.totalTransferCapability,&#10548;>>
--
////


//[discrete]
[#TransmissionReservation]
=== `TransmissionReservation`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionPath.TransmissionReservation`
| Cardinality
| 0..*
| Type
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]


|===

////
[.text-left]
--
<<slots_table.TransmissionReservation,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ServicePoint.adoc[`ServicePoint`] | xref::class/ServicePoint.adoc#PORTransmissionPath[`PORTransmissionPath`]



| xref::class/TransmissionCorridor.adoc[`TransmissionCorridor`] | xref::class/TransmissionCorridor.adoc#ContainedIn[`ContainedIn`]



| xref::class/TransmissionProduct.adoc[`TransmissionProduct`] | xref::class/TransmissionProduct.adoc#LocationFor[`LocationFor`]



| xref::class/TransmissionReservation.adoc[`TransmissionReservation`] | xref::class/TransmissionReservation.adoc#TransmissionPath[`TransmissionPath`]


|===

